--- a/www/views/index.html
+++ b/www/views/index.html
@@ -10,19 +10,21 @@
     <div class="jumbotron">
         <div id="header" class="container">
             <img id="logo" src="/www/img/logo.png" />
-            <h3 id="heading">Reset password</h3>
+            <h3 id="heading">API Doctor</h3>
         </div>
     </div>
 
     <div class="container">
         <div class="jumbotron" style="max-width: 500px;margin: 0 auto;">
 
-            <h3>Password reset successfully!</h3>
-            <h5>You can now log back in. Happy yapping!</h5>
+            <h2>Welcome to API Doctor</h2>
+            <a href="/status">Check APIs</a>
 
         </div>
     </div>
 
     <script src="/www/js/jquery.min.js"></script>
+    <script src="/www/js/jquery.validate.min.js"></script>
+    <script src="/www/js/check-password.js"></script>
 </body>
 </html>
