--- a/www/views/status.html
+++ b/www/views/status.html
@@ -17,7 +17,9 @@
     <div class="container">
         <div class="jumbotron" style="max-width: 500px;margin: 0 auto;">
 
-            <h2>All good!</h2>
+            <h4>API 1: {{code1}}</h4>
+            <h4>API 2: {{code1}}</h4>
+            <h4>API 3: {{code1}}</h4>
 
         </div>
     </div>
