--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,9 @@ body {
   color: #ffffff;
   font-family: "Calibri", sans-serif;
 }
+.add-bottom {
+  margin-bottom: 200px;
+}
 .jumbotron {
   background: #a60000;
 }
@@ -23,4 +26,7 @@ body {
 }
 .tdata {
   padding: 3px 5px;
+}
+text {
+  color: white;
 }
