--- a/www/views/index.html
+++ b/www/views/index.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container add-bottom">
         <div class="jumbotron" style="max-width: 720px;margin: 0 auto;">
 
             <h2>Select a service to inspect</h2>
@@ -25,11 +25,16 @@
                 </form>
             {% endfor %}
 
+            <br/><br/><br/>
+
+            <form action="{{api}}/add" method="GET" style="display: inline;">
+                <input class="btn btn-default" type="submit" value="Add a new API to the system" style="margin: 10px 0;">
+            </form>
+
         </div>
     </div>
 
     <script src="/www/js/jquery.min.js"></script>
-    <script src="/www/js/jquery.validate.min.js"></script>
     <script src="/www/js/check-password.js"></script>
 </body>
 </html>
